--- a/assets/src/scss/abstracts/variables/primary/_colors.scss
+++ b/assets/src/scss/abstracts/variables/primary/_colors.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 // Main color (Figma Design)
-$sheen_primary_color: #000000;
-$sheen_dark_color: #060606;
-$sheen_white_color: #ffffff;
-$sheen_accent_color: #ff00b8;
+$collaborate_primary_color: #000000;
+$collaborate_dark_color: #060606;
+$collaborate_white_color: #ffffff;
+$collaborate_accent_color: #ff00b8;
