--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -3,8 +3,8 @@ h1,
     font-weight: 700;
     font-size: rem(60px);
     line-height: rem(60px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 h2,
@@ -12,8 +12,8 @@ h2,
     font-weight: 700;
     font-size: rem(32px);
     line-height: rem(35px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 h3,
@@ -21,8 +21,8 @@ h3,
     font-weight: 700;
     font-size: rem(24px);
     line-height: rem(24px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 .h3--regular {
@@ -34,8 +34,8 @@ h4,
     font-weight: 400;
     font-size: rem(20px);
     line-height: rem(26px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 h5,
@@ -43,8 +43,8 @@ h5,
     font-weight: 400;
     font-size: rem(16px);
     line-height: rem(25px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 .h5--italic {
@@ -56,8 +56,8 @@ h6,
     font-weight: 400;
     font-size: rem(14px);
     line-height: rem(18px);
-    font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    font-family: $collaborate_main_font;
+    color: $collaborate_primary_color;
 }
 
 h1,
