--- a/assets/src/scss/settings/primary/_fonts.scss
+++ b/assets/src/scss/settings/primary/_fonts.scss
@@ -21,4 +21,4 @@
         /* Modern Browsers */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.ttf") format("truetype");
 }
 
-$sheen_main_font: "dm-sans";
+$collaborate_main_font: "dm-sans";
