--- a/assets/src/scss/base/elements/primary/_html.scss
+++ b/assets/src/scss/base/elements/primary/_html.scss
@@ -1,5 +1,5 @@
 html {
     scroll-behavior: smooth;
     font-weight: 400;
-    font: 16px/25px $sheen_main_font;
+    font: 16px/25px $collaborate_main_font;
 }
