--- a/assets/src/scss/abstracts/variables/primary/_colors.scss
+++ b/assets/src/scss/abstracts/variables/primary/_colors.scss
@@ -3,7 +3,27 @@
 \*------------------------------------*/
 
 // Main color (Figma Design)
-$sheen_primary_color: #000000;
-$sheen_dark_color: #060606;
-$sheen_white_color: #ffffff;
-$sheen_accent_color: #ff00b8;
+$collaborate_primary_color: #004b62;
+$sheen_primary_accent_color: #f9b401;
+
+$sheen_secondary_info_color: #00363c;
+$sheen_secondary_success_color: #38bac5;
+
+$sheen_secondary_warning_color: #8ad6dc;
+$sheen_secondary_error_error: #c5edf0;
+
+$sheen_state_info_color: #00828f;
+$sheen_state_success_color: #27ae60;
+$sheen_state_warning_color: #fb9504;
+$sheen_state_error_color: #e13244;
+
+$sheen_dark_400_color: #000000; // Heavy Dark
+$sheen_dark_300_color: #1d1d1d; // Mdeium Dark
+$sheen_dark_200_color: #282828; // light Dark
+$sheen_white: #ffffff; // white
+
+$sheen_gray_500_color: #958986; // heavy gray
+$sheen_gray_400_color: #4f4f4f; // mid gray gray
+$sheen_gray_300_color: #828282; // semi gray gray
+$sheen_gray_200_color: #bdbdbd; // semi light gray
+$sheen_gray_100_color: #e0e0e0; // light gray
