--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -4,7 +4,7 @@ h1,
     font-size: rem(60px);
     line-height: rem(60px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 h2,
@@ -13,7 +13,7 @@ h2,
     font-size: rem(32px);
     line-height: rem(35px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 h3,
@@ -22,7 +22,7 @@ h3,
     font-size: rem(24px);
     line-height: rem(24px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 .h3--regular {
@@ -35,7 +35,7 @@ h4,
     font-size: rem(20px);
     line-height: rem(26px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 h5,
@@ -44,7 +44,7 @@ h5,
     font-size: rem(16px);
     line-height: rem(25px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 .h5--italic {
@@ -57,7 +57,7 @@ h6,
     font-size: rem(14px);
     line-height: rem(18px);
     font-family: $sheen_main_font;
-    color: $sheen_primary_color;
+    color: $collaborate_primary_color;
 }
 
 h1,
