--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -437,7 +437,7 @@ h1,
   font-size: 3.75rem;
   line-height: 3.75rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 h2,
@@ -446,7 +446,7 @@ h2,
   font-size: 2rem;
   line-height: 2.1875rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 h3,
@@ -455,7 +455,7 @@ h3,
   font-size: 1.5rem;
   line-height: 1.5rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 .h3--regular {
@@ -468,7 +468,7 @@ h4,
   font-size: 1.25rem;
   line-height: 1.625rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 h5,
@@ -477,7 +477,7 @@ h5,
   font-size: 1rem;
   line-height: 1.5625rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 .h5--italic {
@@ -490,7 +490,7 @@ h6,
   font-size: 0.875rem;
   line-height: 1.125rem;
   font-family: "dm-sans";
-  color: #000000;
+  color: #004b62;
 }
 
 h1,
