--- a/assets/src/scss/abstracts/variables/primary/_colors.scss
+++ b/assets/src/scss/abstracts/variables/primary/_colors.scss
@@ -4,26 +4,26 @@
 
 // Main color (Figma Design)
 $collaborate_primary_color: #004b62;
-$sheen_primary_accent_color: #f9b401;
+$collaborate_primary_accent_color: #f9b401;
 
-$sheen_secondary_info_color: #00363c;
-$sheen_secondary_success_color: #38bac5;
+$collaborate_secondary_info_color: #00363c;
+$collaborate_secondary_success_color: #38bac5;
 
-$sheen_secondary_warning_color: #8ad6dc;
-$sheen_secondary_error_error: #c5edf0;
+$collaborate_secondary_warning_color: #8ad6dc;
+$collaborate_secondary_error_error: #c5edf0;
 
-$sheen_state_info_color: #00828f;
-$sheen_state_success_color: #27ae60;
-$sheen_state_warning_color: #fb9504;
-$sheen_state_error_color: #e13244;
+$collaborate_state_info_color: #00828f;
+$collaborate_state_success_color: #27ae60;
+$collaborate_state_warning_color: #fb9504;
+$collaborate_state_error_color: #e13244;
 
-$sheen_dark_400_color: #000000; // Heavy Dark
-$sheen_dark_300_color: #1d1d1d; // Mdeium Dark
-$sheen_dark_200_color: #282828; // light Dark
-$sheen_white: #ffffff; // white
+$collaborate_dark_400_color: #000000; // Heavy Dark
+$collaborate_dark_300_color: #1d1d1d; // Mdeium Dark
+$collaborate_dark_200_color: #282828; // light Dark
+$collaborate_white: #ffffff; // white
 
-$sheen_gray_500_color: #958986; // heavy gray
-$sheen_gray_400_color: #4f4f4f; // mid gray gray
-$sheen_gray_300_color: #828282; // semi gray gray
-$sheen_gray_200_color: #bdbdbd; // semi light gray
-$sheen_gray_100_color: #e0e0e0; // light gray
+$collaborate_gray_500_color: #958986; // heavy gray
+$collaborate_gray_400_color: #4f4f4f; // mid gray gray
+$collaborate_gray_300_color: #828282; // semi gray gray
+$collaborate_gray_200_color: #bdbdbd; // semi light gray
+$collaborate_gray_100_color: #e0e0e0; // light gray
