--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -3,7 +3,7 @@ h1,
     font-weight: 700;
     font-size: rem(60px);
     line-height: rem(60px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
@@ -12,7 +12,7 @@ h2,
     font-weight: 700;
     font-size: rem(32px);
     line-height: rem(35px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
@@ -21,7 +21,7 @@ h3,
     font-weight: 700;
     font-size: rem(24px);
     line-height: rem(24px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
@@ -34,7 +34,7 @@ h4,
     font-weight: 400;
     font-size: rem(20px);
     line-height: rem(26px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
@@ -43,7 +43,7 @@ h5,
     font-weight: 400;
     font-size: rem(16px);
     line-height: rem(25px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
@@ -56,7 +56,7 @@ h6,
     font-weight: 400;
     font-size: rem(14px);
     line-height: rem(18px);
-    font-family: $sheen_main_font;
+    font-family: $collaborate_main_font;
     color: $collaborate_primary_color;
 }
 
