--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -317,21 +317,28 @@ template {
 # Settings
 --------------------------------------------- */
 /*------------------------------------*\
-  #DM SANS
+  #Inter
 \*------------------------------------*/
-/* dm-sans-400 - latin */
+/* inter - 500 */
 @font-face {
-  font-family: "dm-sans";
+  font-family: "inter";
+  font-style: normal;
+  font-weight: 500;
+  src: local(""), url("../../assets/fonts/inter/inter-v12-latin-500.woff2") format("woff2"), url("../../assets/fonts/inter/inter-v12-latin-500.woff") format("woff"), url("../../assets/fonts/inter/inter-v12-latin-500.ttf") format("truetype");
+}
+/* inter - 700 */
+@font-face {
+  font-family: "inter";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../../assets/fonts/inter/inter-v12-latin-700.woff2") format("woff2"), url("../../assets/fonts/inter/inter-v12-latin-700.woff") format("woff"), url("../../assets/fonts/inter/inter-v12-latin-700.ttf") format("truetype");
+}
+/* inter - 400 */
+@font-face {
+  font-family: "inter";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.woff2") format("woff2"), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.woff") format("woff"), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.ttf") format("truetype");
-}
-/* dm-sans-400 - italic */
-@font-face {
-  font-family: "dm-sans";
-  font-style: italic;
-  font-weight: 400;
-  src: local(""), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.woff2") format("woff2"), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.woff") format("woff"), url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.ttf") format("truetype");
+  src: local(""), url("../../assets/fonts/inter/inter-v12-latin-regular.woff2") format("woff2"), url("../../assets/fonts/inter/inter-v12-latin-regular.woff") format("woff"), url("../../assets/fonts/inter/inter-v12-latin-regular.ttf") format("truetype");
 }
 /*--------------------------------------------------------------
 # Abstracts
@@ -399,7 +406,7 @@ template {
 html {
   scroll-behavior: smooth;
   font-weight: 400;
-  font: 16px/25px "dm-sans";
+  font: 16px/25px "inter";
 }
 
 * {
@@ -431,66 +438,66 @@ input[type=search]::-webkit-search-results-decoration {
 /*------------------------------------*\
   # block
 \*------------------------------------*/
+.text-massive {
+  font-size: 5.625rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+  font-family: "inter";
+}
+
 h1,
 .h1 {
+  font-size: 4.6875rem;
+  line-height: 2.25rem;
   font-weight: 700;
-  font-size: 3.75rem;
-  line-height: 3.75rem;
-  font-family: "dm-sans";
-  color: #004b62;
+  font-family: "inter";
 }
 
 h2,
 .h2 {
+  font-size: 3.125rem;
+  line-height: 2.25rem;
   font-weight: 700;
-  font-size: 2rem;
-  line-height: 2.1875rem;
-  font-family: "dm-sans";
-  color: #004b62;
+  font-family: "inter";
 }
 
 h3,
 .h3 {
+  font-size: 1.9375rem;
+  line-height: 2.125rem;
   font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 1.5rem;
-  font-family: "dm-sans";
-  color: #004b62;
-}
-
-.h3--regular {
-  font-weight: 400;
+  font-family: "inter";
 }
 
 h4,
 .h4 {
-  font-weight: 400;
+  font-size: 1.75rem;
+  line-height: 2.25rem;
+  font-weight: 500;
+  font-family: "inter";
+}
+
+.h4--small {
   font-size: 1.25rem;
-  line-height: 1.625rem;
-  font-family: "dm-sans";
-  color: #004b62;
+  line-height: 1.25rem;
+  font-weight: 500;
+  font-family: "inter";
 }
 
 h5,
 .h5 {
-  font-weight: 400;
   font-size: 1rem;
-  line-height: 1.5625rem;
-  font-family: "dm-sans";
-  color: #004b62;
-}
-
-.h5--italic {
-  font-style: italic;
+  line-height: 1.1875rem;
+  font-weight: 700;
+  font-family: "inter";
 }
 
 h6,
 .h6 {
+  font-size: 0.9375rem;
+  line-height: 2.125rem;
   font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-  font-family: "dm-sans";
-  color: #004b62;
+  font-family: "inter";
 }
 
 h1,
