--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -1,63 +1,63 @@
+.text-massive {
+    font-size: rem(90px);
+    line-height: rem(36px);
+    font-weight: 700;
+    font-family: $collaborate_main_font;
+}
+
 h1,
 .h1 {
+    font-size: rem(75px);
+    line-height: rem(36px);
     font-weight: 700;
-    font-size: rem(60px);
-    line-height: rem(60px);
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
 }
 
 h2,
 .h2 {
+    font-size: rem(50px);
+    line-height: rem(36px);
     font-weight: 700;
-    font-size: rem(32px);
-    line-height: rem(35px);
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
 }
 
 h3,
 .h3 {
+    font-size: rem(31px);
+    line-height: rem(34px);
     font-weight: 700;
-    font-size: rem(24px);
-    line-height: rem(24px);
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
-}
-
-.h3--regular {
-    font-weight: 400;
 }
 
 h4,
 .h4 {
-    font-weight: 400;
-    font-size: rem(20px);
-    line-height: rem(26px);
+    font-size: rem(28px);
+    line-height: rem(36px);
+    font-weight: 500;
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
+}
+
+.h4--small {
+    font-size: rem(20px);
+    line-height: rem(20px);
+    font-weight: 500;
+    font-family: $collaborate_main_font;
 }
 
 h5,
 .h5 {
-    font-weight: 400;
     font-size: rem(16px);
-    line-height: rem(25px);
+    line-height: rem(19px);
+    font-weight: 700;
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
-}
-
-.h5--italic {
-    font-style: italic;
 }
 
 h6,
 .h6 {
+    font-size: rem(15px);
+    line-height: rem(34px);
     font-weight: 400;
-    font-size: rem(14px);
-    line-height: rem(18px);
     font-family: $collaborate_main_font;
-    color: $collaborate_primary_color;
 }
 
 h1,
