--- a/assets/src/scss/settings/primary/_fonts.scss
+++ b/assets/src/scss/settings/primary/_fonts.scss
@@ -1,24 +1,34 @@
 /*------------------------------------*\
-  #DM SANS
+  #Inter
 \*------------------------------------*/
-/* dm-sans-400 - latin */
+/* inter - 500 */
 @font-face {
-    font-family: "dm-sans";
+    font-family: "inter";
+    font-style: normal;
+    font-weight: 500;
+    src: local(""), /* IE6-IE8 */ url("../../assets/fonts/inter/inter-v12-latin-500.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-500.woff") format("woff"),
+        /* Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-500.ttf") format("truetype");
+}
+
+/* inter - 700 */
+@font-face {
+    font-family: "inter";
+    font-style: normal;
+    font-weight: 700;
+    src: local(""), /* IE6-IE8 */ url("../../assets/fonts/inter/inter-v12-latin-700.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-700.woff") format("woff"),
+        /* Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-700.ttf") format("truetype");
+}
+
+/* inter - 400 */
+@font-face {
+    font-family: "inter";
     font-style: normal;
     font-weight: 400;
-    src: local(""), /* IE6-IE8 */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.woff2") format("woff2"),
-        /* Super Modern Browsers */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.woff") format("woff"),
-        /* Modern Browsers */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-regular.ttf") format("truetype");
+    src: local(""), /* IE6-IE8 */ url("../../assets/fonts/inter/inter-v12-latin-regular.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-regular.woff") format("woff"),
+        /* Modern Browsers */ url("../../assets/fonts/inter/inter-v12-latin-regular.ttf") format("truetype");
 }
 
-/* dm-sans-400 - italic */
-@font-face {
-    font-family: "dm-sans";
-    font-style: italic;
-    font-weight: 400;
-    src: local(""), /* IE6-IE8 */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.woff2") format("woff2"),
-        /* Super Modern Browsers */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.woff") format("woff"),
-        /* Modern Browsers */ url("../../assets/fonts/dm-sans/dm-sans-v10-latin-italic.ttf") format("truetype");
-}
-
-$collaborate_main_font: "dm-sans";
+$collaborate_main_font: "inter";
