Add Home page design

--- a/assets/src/scss/abstracts/variables/primary/_colors.scss
+++ b/assets/src/scss/abstracts/variables/primary/_colors.scss
@@ -11,6 +11,7 @@ $collaborate_secondary_success_color: #38bac5;
 
 $collaborate_secondary_warning_color: #8ad6dc;
 $collaborate_secondary_error_error: #c5edf0;
+$collaborate_secondary_btn_color: #81c0c5;
 
 $collaborate_state_info_color: #00828f;
 $collaborate_state_success_color: #27ae60;
