--- a/assets/src/scss/components/_components.scss
+++ b/assets/src/scss/components/_components.scss
@@ -2,6 +2,9 @@
 @import "primary/nav";
 @import "primary/main";
 @import "primary/filter";
+@import "primary/hero";
+@import "primary/goals";
+@import "primary/join-us";
 @import "primary/post";
 @import "common/button";
 @import "common/social-share";
