--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,7 @@ html {
 
 body {
   transition: all 0.2s;
+  font-family: "inter";
 }
 
 /*------------------------------------*\
@@ -440,7 +441,7 @@ input[type=search]::-webkit-search-results-decoration {
 \*------------------------------------*/
 .text-massive {
   font-size: 5.625rem;
-  line-height: 2.25rem;
+  line-height: 4.375rem;
   font-weight: 700;
   font-family: "inter";
 }
@@ -448,7 +449,7 @@ input[type=search]::-webkit-search-results-decoration {
 h1,
 .h1 {
   font-size: 4.6875rem;
-  line-height: 2.25rem;
+  line-height: 3.75rem;
   font-weight: 700;
   font-family: "inter";
 }
@@ -456,7 +457,7 @@ h1,
 h2,
 .h2 {
   font-size: 3.125rem;
-  line-height: 2.25rem;
+  line-height: 3.125rem;
   font-weight: 700;
   font-family: "inter";
 }
@@ -480,7 +481,7 @@ h4,
 .h4--small {
   font-size: 1.25rem;
   line-height: 1.25rem;
-  font-weight: 500;
+  font-weight: 700;
   font-family: "inter";
 }
 
@@ -506,7 +507,7 @@ h3,
 h4,
 h5,
 h6 {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 /*--------------------------------------------------------------
@@ -525,11 +526,182 @@ h6 {
   #Main Component
 \*------------------------------------*/
 /*------------------------------------*\
+  #Hero
+\*------------------------------------*/
+.c-hero {
+  width: 100%;
+  height: 640px;
+  background: linear-gradient(#e0bc71, #d9b15a);
+}
+.c-hero::before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 50;
+  background-image: url(/assets/images/girls.png);
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
+}
+@media (max-width: 57.49em) {
+  .c-hero::before {
+    bottom: 0;
+    top: unset;
+    background-size: 500px 60%;
+    background-position: center bottom;
+  }
+}
+
+.c-hero__title {
+  color: #ffffff;
+  margin-top: 0;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+  position: relative;
+  z-index: 60;
+  padding-top: 80px;
+  padding-left: 20px;
+}
+@media (max-width: 57.49em) {
+  .c-hero__title {
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
+}
+@media (min-width: 57.5em) {
+  .c-hero__title {
+    padding-top: 100px;
+    padding-left: 100px;
+  }
+}
+
+.c-hero__title__secondary {
+  color: #004b62;
+  margin: 0;
+  padding-left: 20px;
+}
+@media (max-width: 57.49em) {
+  .c-hero__title__secondary {
+    font-size: 40px;
+  }
+}
+@media (min-width: 57.5em) {
+  .c-hero__title__secondary {
+    margin-top: 57px;
+    padding-left: 100px;
+  }
+}
+
+/*------------------------------------*\
+  #Goals
+\*------------------------------------*/
+.c-goals {
+  width: 100%;
+  background-color: #c5edf0;
+  margin-top: 43px;
+  padding-bottom: 32px;
+}
+
+.c-goals__title {
+  color: #004b62;
+  text-align: center;
+  margin: 0;
+  padding-top: 43px;
+}
+
+.c-goals__collaborate {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 88px;
+}
+
+.c-goals__item {
+  width: 250px;
+  margin: 0px 72px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.c-goals__desc {
+  width: 100%;
+  color: #004b62;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+
+.c-join-us {
+  width: 100%;
+  margin-top: 70px;
+  text-align: center;
+}
+
+.c-join-us__title {
+  color: #00828f;
+  margin: 24px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.c-join-us__title--space-top {
+  margin-top: 110px;
+}
+
+.c-join-us__colorful {
+  color: #f9b401;
+}
+
+/*------------------------------------*\
   #Post
 \*------------------------------------*/
 /*------------------------------------*\
   #Button ( Primary )
 \*------------------------------------*/
+button,
+.wp-block-button__link,
+.o-btn,
+input[type=button],
+input[type=reset],
+input[type=submit] {
+  border-radius: 999px;
+  background-color: #00828f;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 9px 30px;
+  text-transform: capitalize;
+}
+button:hover, button:focus, button:active,
+.wp-block-button__link:hover,
+.wp-block-button__link:focus,
+.wp-block-button__link:active,
+.o-btn:hover,
+.o-btn:focus,
+.o-btn:active,
+input[type=button]:hover,
+input[type=button]:focus,
+input[type=button]:active,
+input[type=reset]:hover,
+input[type=reset]:focus,
+input[type=reset]:active,
+input[type=submit]:hover,
+input[type=submit]:focus,
+input[type=submit]:active {
+  cursor: pointer;
+  background-color: #81c0c5;
+}
+.o-btn--secondary {
+  background-color: #81c0c5;
+}
+.o-btn--secondary:hover, .o-btn--secondary:focus, .o-btn--secondary:active {
+  background-color: #00828f;
+}
+
+.o-btn--wide {
+  padding: 19px 100px;
+}
+
 /*------------------------------------*\
   #Social Share
 \*------------------------------------*/
