--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -1,61 +1,61 @@
 .text-massive {
-    font-size: rem(90px);
-    line-height: rem(70px);
+    font-size: 90px;
+    line-height: 70px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h1,
 .h1 {
-    font-size: rem(75px);
-    line-height: rem(60px);
+    font-size: 75px;
+    line-height: 60px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h2,
 .h2 {
-    font-size: rem(50px);
-    line-height: rem(50px);
+    font-size: 50px;
+    line-height: 50px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h3,
 .h3 {
-    font-size: rem(31px);
-    line-height: rem(34px);
+    font-size: 31px;
+    line-height: 34px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h4,
 .h4 {
-    font-size: rem(28px);
-    line-height: rem(36px);
+    font-size: 28px;
+    line-height: 36px;
     font-weight: 500;
     font-family: $collaborate_main_font;
 }
 
 .h4--small {
-    font-size: rem(20px);
-    line-height: rem(20px);
+    font-size: 20px;
+    line-height: 20px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h5,
 .h5 {
-    font-size: rem(16px);
-    line-height: rem(19px);
+    font-size: 16px;
+    line-height: 19px;
     font-weight: 700;
     font-family: $collaborate_main_font;
 }
 
 h6,
 .h6 {
-    font-size: rem(15px);
-    line-height: rem(34px);
+    font-size: 15px;
+    line-height: 34px;
     font-weight: 400;
     font-family: $collaborate_main_font;
 }
