Add routines page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,6 +869,129 @@ a {
   #Post
 \*------------------------------------*/
 /*------------------------------------*\
+  #Routines
+\*------------------------------------*/
+.c-routines {
+  width: 100%;
+  margin-top: 75px;
+}
+
+.c-routines__title {
+  margin: 0;
+  text-align: center;
+  color: #00828f;
+}
+
+.c-routnies__cats {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media (min-width: 57.5em) {
+  .c-routnies__cats {
+    margin-top: 114px;
+  }
+}
+
+.c-routines__cat {
+  width: 160px;
+  height: 50px;
+  background-color: #81c0c5;
+  margin: 16px 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: #ffffff;
+}
+@media (min-width: 77.5em) {
+  .c-routines__cat {
+    margin: 0px 50px;
+  }
+}
+
+.c-routines__cat.active {
+  background-color: #f9b401;
+}
+
+.c-routines__posts {
+  width: 100%;
+  margin-top: 50px;
+  padding: 0px 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media (min-width: 57.5em) {
+  .c-routines__posts {
+    margin-top: 150px;
+    padding: 0px 100px;
+  }
+}
+
+.c-routines__post {
+  width: 360px;
+  height: 300px;
+  margin: 0px 37.5px;
+  margin-bottom: 32px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
+}
+@media (min-width: 57.5em) {
+  .c-routines__post {
+    margin-bottom: 95px;
+  }
+}
+
+.c-routines__meta {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.c-routines__avatar {
+  width: 70px;
+  max-width: 70px;
+}
+
+.c-routines__avatar-img {
+  margin-left: 18px;
+  max-width: 70px;
+  height: auto;
+}
+
+.c-routines__context {
+  width: calc(100% - 99px);
+  margin-left: 10px;
+}
+
+.c-routines__context__title {
+  color: #f9b401;
+  margin: 0;
+}
+
+.c-routines__context__meta {
+  display: flex;
+  justify-content: space-between;
+}
+
+.c-routines__profile-name {
+  color: #004b62;
+}
+
+.c-routines__profile-name--has-space {
+  margin-right: 30px;
+}
+
+/*------------------------------------*\
+  #Comments Form 
+\*------------------------------------*/
+/*------------------------------------*\
+  #Profile
+\*------------------------------------*/
+/*------------------------------------*\
   #Button ( Primary )
 \*------------------------------------*/
 button,
@@ -922,12 +1045,6 @@ input[type=submit]:active {
 \*------------------------------------*/
 /*------------------------------------*\
   #Single
-\*------------------------------------*/
-/*------------------------------------*\
-  #Comments Form 
-\*------------------------------------*/
-/*------------------------------------*\
-  #Profile
 \*------------------------------------*/
 /*------------------------------------*\
   #Footer
