--- a/assets/src/scss/components/_components.scss
+++ b/assets/src/scss/components/_components.scss
@@ -6,12 +6,13 @@
 @import "primary/goals";
 @import "primary/join-us";
 @import "primary/post";
+@import "primary/routines";
+@import "primary/category";
+@import "primary/comments";
+@import "primary/profile";
 @import "common/button";
 @import "common/social-share";
 @import "common/pagination";
 @import "content/single";
-@import "primary/category";
-@import "primary/comments";
-@import "primary/profile";
 @import "media/gallery";
 @import "primary/footer";
